# tcc

./: Cargo.toml
src/: adpters.rs  config.rs  domain.rs  main.rs  ports.rs
src/adpters/db_out/: users.rs
src/adpters/db_outbound/: book.rs  users.rs
src/adpters/http_in/: users.rs
src/adpters/http_inbound/: book.rs  users.rs
src/config/: connections.rs
src/domain/bussines_logical/: book.rs  users.rs
src/ports/inbound/: book.rs  users.rs
src/ports/outbound/: book.rs  users.rs
