[package]
name = "hexagonal-architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
chrono = "0.4" # Used for setting DateTimes
[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]